--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,211 @@
 <!-- In this file you are going to write the CSS code -->
+*{
+    margin: 0;
+}
+        #imageDiv {
+            height: 400px !important;
+            margin: 0 80px;
+           
+			background:url(billboard.jpg) no-repeat;
+			background-size: cover;
+			background-position: left;
+        }
+
+        #tblStripe {
+            width: 100%;
+            height: 50px;
+            background-color: rgba(255,255,255,0.7);
+        }
+
+        .logo {
+            height: 50px;
+            width: 70px;
+            margin:0 0 0 150px;
+        }
+
+        .navbar {
+            float: right;
+            margin-right: 30px;
+        }
+
+            .navbar li {
+                display: inline !important;
+            }
+
+                .navbar li a {
+                    text-decoration: none;
+                    margin: 5px;
+                    font-family: sans-serif;
+                    font-weight: 500;
+                    font-size: 15px;
+                    color: black;
+                }
+
+
+        #tblStripeBottom {
+            margin-top: 287px;
+            width: 100%;
+            height: 50px;
+            background-color: rgba(255,255,255,0.7);
+        }
+
+        #tblStripeBottom {
+            padding: 0 30px;
+        }
+
+        .btnGetInTouch {
+            float: right;
+            padding: 10px 30px;
+            border: 0px !important;
+            background-color: skyblue;
+            text-transform: uppercase !important;
+            font-weight: 500;
+            color: white;
+            cursor: pointer;
+        }
+
+        .pInfo {
+            font-family: sans-serif;
+            font-size: 15px;
+        }
+        .service{
+            width: 70%;
+            margin: 0 auto;
+            position: relative;
+        }
+        ul{
+            list-style-type: none;
+        }
+        .head h1{
+            margin: 50px auto;
+            text-align: center;
+            font-size: 30px;
+            margin-bottom: 100px;
+            justify-content: center; 
+            
+        }
+        .service{
+            display: flex;
+            justify-content: space-between;
+        }
+        .service img{
+            height: 50px;
+            position: relative;
+            top: 0px;
+             left: 0; 
+        }
+        .service li{
+             display: flexbox;
+            display: inline; 
+            width: 30%;
+            text-align:center;
+            position: relative;  
+            justify-content:center;
+            
+        }
+
+        .recent_work{
+            width: 100%;
+            height: 200px;
+            display: flex;
+            flex-direction: row; 
+            overflow: hidden; 
+            border-radius: 5px;  
+        }
+        .recent_work img{
+            width: 20%;
+            border-radius: 5px;
+        }
+        .recent_work img:hover{
+            transform: scale(2,2);
+            transition: .3s transform;
+            
+        }
+        
+
+        .testimonials_wrapper{
+            padding: 40px 0;
+            background: #f1f1f1;
+            color:  #434343;
+            text-align: center;
+        }
+         .inner{
+            max-width: 1200px;
+            margin: auto;
+            overflow: hidden;
+            padding: 0 20px;
+        }
+
+        .row{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .col{
+            flex: 33.33%;
+            max-width: 33.33%;
+            box-sizing: border-box;
+            padding: 15px;
+        }
+        .testimonial{
+            background: #fff;
+            padding: 30px;
+        }
+        .testimonial img{
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+        .name{
+            font-size: 20px;
+            margin: 20px 0;
+        }
+        
+        .footer_widget{
+            display: flex;
+            color: white;
+            background-color: rgb(44, 42, 42);
+            width: 100%;
+            justify-content: space-around;
+            line-height: 30px;
+            font-size: 20px;
+        }
+        .footer_widget img{
+        height: 20px;
+        margin-left: 0;
+        }
+        .footer_widget div{
+            width: 17%;
+            text-align: left;
+        
+        }
+        #comp_list{
+            list-style-type: none;
+            padding-left: 0;
+        }
+        #comp_list a{
+            color: white;
+            text-decoration: none;
+        }
+        #comp_list a:hover{
+            color: yellow;
+        }
+        #sup_list{
+            list-style-type: none;
+            padding-left: 0;
+        }
+        #sup_list a{
+            color: white;
+            text-decoration: none;
+        }
+        #sup_list a:hover{
+            color: purple;
+        }
+        footer{
+            background-color: rgb(44, 42, 42);
+            
+        }
+        .rights{
+            text-align: center;
+            color: white;
+        }
