--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,7 @@
-<!-- In this file you are going to write the CSS code -->
 *{
     margin: 0;
 }
-        #imageDiv {
+        .transparent_nav {
             height: 400px !important;
             margin: 0 80px;
            
@@ -23,16 +22,16 @@
             margin:0 0 0 150px;
         }
 
-        .navbar {
+        #nav_list {
             float: right;
             margin-right: 30px;
         }
 
-            .navbar li {
+            #nav_list li {
                 display: inline !important;
             }
 
-                .navbar li a {
+                #nav_list li a {
                     text-decoration: none;
                     margin: 5px;
                     font-family: sans-serif;
@@ -53,7 +52,7 @@
             padding: 0 30px;
         }
 
-        .btnGetInTouch {
+        .cta_link {
             float: right;
             padding: 10px 30px;
             border: 0px !important;
@@ -64,7 +63,7 @@
             cursor: pointer;
         }
 
-        .pInfo {
+        .cta_text {
             font-family: sans-serif;
             font-size: 15px;
         }
