--- a/styles/main.css
+++ b/styles/main.css
@@ -52,17 +52,18 @@
             padding: 0 30px;
         }
 
-        .cta_link {
-            float: right;
-            padding: 10px 30px;
-            border: 0px !important;
-            background-color: skyblue;
-            text-transform: uppercase !important;
-            font-weight: 500;
+        #cta_link{
+            text-decoration: none;
+           
+            margin-left: 400px;
+            background-color: rgb(0, 119, 255);
+            padding: 10px;
             color: white;
-            cursor: pointer;
+            margin-bottom: 10px;
         }
-
+        #cta_link:hover{
+            background-color: rgb(0, 75, 161);
+        }
         .cta_text {
             font-family: sans-serif;
             font-size: 15px;
