--- a/styles/main.css
+++ b/styles/main.css
@@ -64,7 +64,7 @@
         #cta_link:hover{
             background-color: rgb(0, 75, 161);
         }
-        .cta_text {
+        #cta_text {
             font-family: sans-serif;
             font-size: 15px;
         }
@@ -95,7 +95,7 @@
              left: 0; 
         }
         .service li{
-             display: flexbox;
+            display: flexbox;
             display: inline; 
             width: 30%;
             text-align:center;
@@ -147,11 +147,11 @@
             box-sizing: border-box;
             padding: 15px;
         }
-        .testimonial{
+        #testimonial{
             background: #fff;
             padding: 30px;
         }
-        .testimonial img{
+        #testimonial img{
             width: 100px;
             height: 100px;
             border-radius: 50%;
