--- a/styles/main.css
+++ b/styles/main.css
@@ -123,7 +123,7 @@
         }
         
 
-        .testimonials_wrapper{
+        .testimonials wrapper{
             padding: 40px 0;
             background: #f1f1f1;
             color:  #434343;
