--- a/styles/main.css
+++ b/styles/main.css
@@ -123,43 +123,40 @@
         }
         
 
-        .testimonials_wrapper{
-            padding: 40px 0;
-            background: #f1f1f1;
-            color:  #434343;
-            text-align: center;
-        }
-         .inner{
-            max-width: 1200px;
-            margin: auto;
-            overflow: hidden;
-            padding: 0 20px;
-        }
+        .testimonials{
+    width: 70%;
+    margin: 30px auto;
+    /* background-color: rgb(179, 172, 172); */
+    position: relative;
+}
+.tHead{
+    text-align: center;
+    margin: 30px auto 100px auto;
+    font-size: 40px;
+}
+.info{
+    display: flex;
+    margin: 0;
+    justify-content: space-between;
+}
+.info li{
+    width: 30%;
+    text-align: justify;
+}
 
-        .row{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .col{
-            flex: 33.33%;
-            max-width: 33.33%;
-            box-sizing: border-box;
-            padding: 15px;
-        }
-        #testimonial{
-            background: #fff;
-            padding: 30px;
-        }
-        #testimonial img{
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-        }
-        .name{
-            font-size: 20px;
-            margin: 20px 0;
-        }
+b{
+    font-size: 20px;
+}
+.info img{
+    position: absolute;
+    top: 70px;
+    border-radius: 100%;
+    margin-left: auto 80px;
+}
+.client{
+    text-align: center;
+}
+
         
         .footer_widget{
             display: flex;
